<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.nishanth.okhttpclientdemo.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/rel1">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Email"
        android:hint="@string/email"
        android:textAlignment="center" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignStart="@+id/Password"
        android:layout_marginTop="5dp"
        android:id="@+id/buttonLogin"
        android:text="@string/Login"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/Password"
        android:hint="@string/password"
        android:layout_below="@+id/Email"
        android:layout_alignLeft="@+id/Email"
        android:layout_alignStart="@+id/Email"
        android:textAlignment="center" />


</RelativeLayout>

<RelativeLayout
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/rel1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:text="Or, Signup" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/first_name"
        android:hint="@string/first_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/last_name"
        android:hint="@string/last_name"
        android:layout_below="@+id/first_name"
        android:layout_alignLeft="@+id/first_name"
        android:layout_alignStart="@+id/first_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_choose"
        android:hint="@string/choose_password"
        android:layout_below="@+id/email_signup"
        android:layout_alignLeft="@+id/email_signup"
        android:layout_alignStart="@+id/email_signup"
        android:layout_marginTop="18dp" />


    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_signup"
        android:layout_below="@+id/password_choose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/email_signup"
        android:hint="@string/email"
        android:layout_below="@+id/last_name"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignStart="@+id/last_name" />
</RelativeLayout>

</RelativeLayout>
